# SmallToolBox

./: .env-EXAMPLE  .gitignore  Dockerfile  README.md  SCREENSHOTS.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
readme/: Diagram.drawio  SCREENSHOTS.md  TODO.md
src/: app.py  config.py  main.py
src/core/: const.py
src/infra/: kafka.py  postgres.py  rabbit.py
src/repositories/: chat.py  kafka.py  rabbit.py  root.py  user.py
src/routes/: __init__.py
src/routes/chat/: __init__.py  crud.py  models.py  router.py  stats.py  template.py
src/routes/root/: __init__.py  crud.py  models.py  router.py  template.py  utils.py
src/routes/user/: __init__.py  crud.py  fsm.py  models.py  router.py  stats.py  template.py
src/sql/: db.py
stb__core/: Dockerfile  README.md  pyproject.toml
stb__core/stbcore/core/: config.py  enums.py  utils.py
stb__core/stbcore/infra/: aiogram.py  kafka.py  minio.py  postgres.py  rabbit.py  redis.py
stb__core/stbcore/models/: base.py  chat.py  message.py  user.py
stb__core/stbcore/schemas/: kafka.py  rabbit.py  redis.py
stb__events_analyzer/: Dockerfile  README.md  pyproject.toml
stb__events_analyzer/src/: main.py
stb__events_analyzer/src/repositories/: events_analyzer.py  postgres.py
stb__events_analyzer/src/services/: events_analyzer.py
stb__stats_generator/: Dockerfile  README.md  pyproject.toml  requirements.txt
stb__stats_generator/src/: main.py
stb__stats_generator/src/repositories/: chat_stats.py  minio.py  postgres.py  rabbit.py  redis.py  user_stats.py
stb__stats_generator/src/services/: chat_stats.py  user_stats.py
stb__tg_messages/: Dockerfile  README.md  pyproject.toml
stb__tg_messages/src/: main.py  schemas.py
stb__tg_messages/src/repositories/: aiogram.py  chat.py  minio.py  rabbit.py  redis.py  user_stats.py
stb__tg_messages/src/services/: chat.py  user_stats.py
