[tool.poetry]
name = "smalltoolbox"
version = "0.1.0"
description = ""
authors = ["YóUnǎi <c0d3r.nodiru.gaji@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
aiogram = "^3.13.1"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
