[project]
name = "smalltoolbox"
version = "0.1.0"
description = ""
authors = [
    {name = "YóUnǎi",email = "c0d3r.nodiru.gaji@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
stbcore = {path = "stb__core", develop = true}

