[project]
name = "stbcore"
version = "0.1.0"
description = "Base module for STB"
authors = [
    {name = "YóUnǎi",email = "c0d3r.nodiru.gaji@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "faststream[cli,kafka,rabbit,redis] (>=0.5.48,<0.6.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
