[project]
name = "stb-stats-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "YóUnǎi",email = "c0d3r.nodiru.gaji@gmail.com"}
]
readme = "README.md"
requires-python = ">3.10,<4"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
stbcore = {path = "../stb__core", develop = true}

